# DTVM

./: .gitignore  AGENTS.md  CMakeLists.txt  commitlint.config.js  fuzz_interp_summary.md  fuzz_summary.md  scheduled-claude-tasks.md
.ci/: run_test_suite.sh
benchmarks/: evm_contract_benchmark.cpp
docs/: architecture-evm.drawio  architecture-overall.drawio  architecture-wasm.drawio  jit-shift-compilation-analysis.md  legacy_multipass_call_repro.md
fuzz_fixed/: crash-007a11cc0fea0a911d5389dd2e714c81277f657d  crash-02765ab830c9d2edfac07c1bfbfe377eb4e8700e  crash-05948304f796e3cb26d3b2d404c969c53effbea6  crash-05e2bd00f384bbca0b3b45256283799a75051225  crash-0e10c1dd2568beb1bdbd4dee10423a089ccf8e25  crash-0e3e0e90a7499e1b47663134bc75bd6437d46f2c  crash-0f73aa433e666d139a8ff884d3a82a58a387bf00  crash-0f7873c50bc828f20702cc177f22d687b19fd81c  crash-1126c4a81b10903d612c23dbfb34fc0dc1a24051  crash-1730cdebf00cca6fdc1e207b2a1055f5eb433449  crash-1b2b84dd51256da060544bf7dc660f7a38308eb6  crash-1da556586bfc0f04b0da53abdd01760b9cf615de  crash-1f22ebffb1de5c89e4431212054a549a672fd51f  crash-1f4dcde41c2cfc56a5db60ee9494a431e635275e  crash-209034a851fbc272d6759da587e498b52d5be337  crash-218db337961bf92f5309aa84ce21c8dfc7661a26  crash-25a11e40ee10f03f3e3466e17055ef284ae08821  crash-2628e2eb3ba9ba5cd93999d69dbb2b76f317b51c  crash-279238e12dd45ed86ca2c01739f010f845ba2854  crash-2af47ccc3bfaa5b5c61d416c585b67736207688e  crash-2afee4cf9b1936e0737bba2140c76cdb6e866dec  crash-2b05c33aaaf9a598a050244680b362b78e38ebaf  crash-2b0a14506d4196615c7647af8a28c7d573a432b5  crash-2be08c80cf1ad32e3f94886aac560cd7948384de  crash-2c93a123f99c098884582443cce4fd2741957e1e  crash-2e6a864a70b6c54b0d88d648cd64bc09a4215cbc  crash-357dbf454505d370d29308e851d67fd1c6be5fa8  crash-3672a220e3ed4c61bf5345b0766bf93b06f1c1d6  crash-371afe4f03ac4103074d003206191ef600668348  crash-37b5bd9f48380813d4cff9dff461edeb7c6d9fae  (+131 more)
src/vm/: CMakeLists.txt  dt_evmc_vm.cpp  dt_vm.cpp  dt_vm.h  wrapped_host.h
(+13431 files in other folders)
